fixed admin dashboard based on database changes, implemented admin live queue section